# cadet

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PHASES.md  MASTER_IMPLEMENTATION_PLAN.md  README.md  SESSION.md  design-tokens.json  package.json  tsconfig.base.json  whats-next.md
.cadet/: README.md  config.toml
.cadet/agents/: apollo.md  atlas.md  deploy-operator.md  manifest-validator.md  mercury.md  spacetime-analyst.md  titan.md  workflow-debugger.md
.cadet/commands/: agent-catalog.md  dispatch.md  spacetime-query.md  workflow-status.md
.cadet/prompts/agents/: saturn.md  voyager.md
.cadet/skills/: agent-manifest.md  control-plane.md  memory-system.md  workflow-ops.md
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  labeler.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  qa_report.yml
.github/workflows/: agent-fix-ci.yml  agent-implement.yml  agent-review.yml  auto-label.yml  ci.yml  claude.yml  github-pages.yml  release.yml  sync-labels.yml  vercel-deploy.yml
apps/local-control/: package.json
apps/web/: next-auth.d.ts  next.config.mjs  next.config.ts  package.json  proxy.test.ts  proxy.ts  tsconfig.json  vercel.json
docker/: runner.Dockerfile
docs/: AGENT_MANIFESTS.md  AGENT_TOOLS_GUIDE.md  API_ROUTES.md  ARCHITECTURE_GUIDE.md  COMPETITIVE_STRATEGY.md  CONVERSATION_SYNTHESIS.md  DESKTOP_SPEC.md  DIOXUS_SPACETIMEDB.md  DYNAMIC_AGENT_UI.md  FRAMEWORK_RESEARCH_BLUEPRINT.md  GITHUB_AUTOMATION.md  PROMPT_SYSTEM.md  RALPH_LOOP.md  README.md  SELF_IMPROVING_AGENTS.md  SPACETIMEDB_NOVEL_FEATURES.md  SUBSCRIPTION_SYSTEM.md  TOOLS_REFERENCE.md  ai-agent-ui-ux-research-2026.md
docs-site/: layout-default.html  site.css
docs/specs/: 001-live-data-layer.md  002-web-client.md  003-chat-view.md  004-terminal-view.md  005-database-inspector.md  006-settings-view.md  007-journal-view.md  008-skills-view.md  009-logs-view.md  010-heartbeat-view.md  011-overview-signals.md  012-agents-builder.md  013-runs-detail.md  014-navigation-palette.md  015-style-polish.md  016-trajectory-scoring.md  017-local-embeddings.md  018-quasar-beam.md  019-inference-server.md  README.md
examples/agents/: operator.agent.json  researcher.agent.json  saturn.agent.json  voyager.agent.json
rust/starbridge-control-client/: Cargo.toml
rust/starbridge-core/: Cargo.toml
rust/starbridge-dioxus/: Cargo.toml
rust/starbridge-dioxus/examples/: render_snapshot.rs
rust/starbridge-dioxus/src/: auth_provider.rs  clipboard.rs  lib.rs  live.rs  mascot.rs  web_client.rs  widget.rs
rust/starbridge-dioxus/src/ui/: icons.rs  mod.rs  models.rs  sample.rs  shared.rs  sidebar.rs  styles.rs
rust/starbridge-dioxus/src/ui/views/: ai_chat.rs  catalog.rs  chat.rs  chat_sidebar.rs  chat_types.rs  memory.rs  mod.rs  ops_home.rs  overview.rs  rl_dashboard.rs  surfaces.rs  task_detail.rs  task_home.rs  wallet.rs  workflow.rs
rust/starbridge-runner/: Cargo.toml
rust/starbridge-runner/src/: main.rs
scripts/: build-docs-site.mjs  check-doc-links.mjs  fix-chat-sourcemap.mjs  spacetime.ts
spacetimedb/: Cargo.toml
spacetimedb/src/: lib.rs
(+247 files in other folders)
