[package]
name = "starbridge-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
spacetimedb-sdk = "2.1.0"
starbridge-core = { path = "../starbridge-core" }
